--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ authors:
     display_name: DubaiTime
     email: adubaitime@gmail.com
     twitter: ''
-    description: "Your Real-Time Guide to Dubai Life, Services & Updates"
+    description: "Your real-time guide to Dubai life to make your expat experience truly exceptional."
     web: "https://dubaitime.github.io"
     gravatar: 0397aa39d5259d69961beaf1155fa085
 plugins:
